--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <button id="roll-dice" onclick="rollDice()">Lanzar Dado</button>
             <div id="dice">🎲</div>
             <div id="scoreboard"></div>
+            <button id="back-to-start" onclick="goToStart()">Volver al Inicio</button>
         </div>
     </div>
     <div id="question-box" class="hidden">
